Objects that cannot be modified at run-time should be created as static constants.